--- a/src/app/users/public/access/access.template.html
+++ b/src/app/users/public/access/access.template.html
@@ -20,7 +20,7 @@
               </div>
               <div class="usa-width-one-half">
                 <div><strong>Message</strong></div>
-                <div class="m_T-2x"><span>{{req.requestorMessage}}</span></div>
+                <div class="m_T-2x"><span>{{trimRequest(req.requestorMessage)}}</span></div>
               </div>
             </div>
           </div>
