SAM-8991: eligibility -> beneficiary changes

--- a/src/app/assistance-listing/display-template-demo/demo.page.html
+++ b/src/app/assistance-listing/display-template-demo/demo.page.html
@@ -145,7 +145,7 @@
         </sam-well>
 
         <p>
-          <span class="field" id="program-beneficiary-eligibility">{{program.data?.eligibility?.beneficiary?.additionalInfo?.content}}</span>
+          <span class="field" id="program-beneficiary-eligibility">{{program.data?.eligibility?.beneficiary?.description}}</span>
         </p>
       </sam-subsection>
       
