--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -225,7 +225,7 @@
       </div>
 
       <p>
-        <span class="field" id="program-beneficiary-eligibility">{{program.data?.eligibility?.beneficiary?.additionalInfo?.content}}</span>
+        <span class="field" id="program-beneficiary-eligibility">{{program.data?.eligibility?.beneficiary?.description}}</span>
       </p>
 
 
