--- a/src/app/users/public/access/access.template.html
+++ b/src/app/users/public/access/access.template.html
@@ -1,57 +1,6 @@
 <div class="access-page">
-  <h1 class="m_T-0">User Access</h1>
-
-  <!-- Pending Requests -->
-  <ng-container *ngIf="requests && requests.length">
-    <h2>Pending Requests</h2>
-    <div class="requests-container">
-      <div class="request-block" *ngFor="let req of requests; let i = index">
-        <div class="usa-grid-full">
-          <!-- Details Column -->
-          <div class="usa-width-five-sixths">
-            <div class="usa-grid-full">
-              <div class="usa-width-one-third">
-                <div class="usa-grid-full">
-                  <div class="usa-width-one-half"><strong>Domain</strong></div>
-                  <div class="usa-width-one-half"><span>{{getDomainNameById(req.domainId)}}</span></div>
-                </div>
-              </div>
-              <div class="usa-width-one-fourth">
-                <div class="usa-grid-full">
-                  <div class="usa-width-one-half"><strong>Status</strong></div>
-                  <div class="usa-width-one-half"><span>Pending</span></div>
-                </div>
-              </div>
-              <div class="usa-width-five-twelfths">
-                <div class="usa-grid-full">
-                  <div class="usa-width-one-half"><strong>Date Requested</strong></div>
-                  <div class="usa-width-one-half"><span>{{req.createdDate | dateFormat: 'MMM DD, YYYY'}}</span></div>
-                </div>
-              </div>
-            </div>
-            <div class="usa-grid-full m_T-2x">
-              <div class="usa-width-one-sixth">
-                <strong>Message</strong>
-              </div>
-              <div class="usa-width-five-sixths text-ellipsis request-message">
-                <span>{{req.requestorMessage}}</span>
-              </div>
-            </div>
-          </div>
-
-          <!-- Cancel -->
-          <div class="usa-width-one-sixth">
-            <button class="usa-button-transparent" (click)="onCancelRequestClick(req.id)">
-              <i class="fa fa-close"></i>
-              <a>Cancel</a>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </ng-container>
-
-  <div class="m_T-4x">
+  <h1 class="m_T-0">Access</h1>
+  <div>
     <samMultiSelectDropdown [hasSelectAll]="hasSelectAll(filters.domains.options)" (modelChange)="domainsChanged($event)" [options]="filters.domains.options" [label]="filters.domains.label" [name]="filters.domains.label" [model]="filters.domains.value"></samMultiSelectDropdown>
     <samMultiSelectDropdown [hasSelectAll]="hasSelectAll(filters.roles.options)" (modelChange)="rolesChanged($event)" [options]="filters.roles.options" [label]="filters.roles.label" [name]="filters.roles.label" [model]="filters.roles.value"></samMultiSelectDropdown>
     <samMultiSelectDropdown [hasSelectAll]="hasSelectAll(filters.organizations.options)" (modelChange)="orgsChanged($event)" [options]="filters.organizations.options" [label]="filters.organizations.label" [name]="filters.organizations.label" [model]="filters.organizations.value"></samMultiSelectDropdown>
@@ -59,6 +8,28 @@
     <samMultiSelectDropdown [hasSelectAll]="hasSelectAll(filters.permissions.options)" (modelChange)="permissionsChanged($event)" [options]="filters.permissions.options" [label]="filters.permissions.label" [name]="filters.permissions.label" [model]="filters.permissions.value"></samMultiSelectDropdown>
     <a [routerLink]="[isAdmin ? '../grant-access' : '../request-access']" class="usa-button usa-button-success pull-right">{{isAdmin ? 'Grant' : 'Request'}} Access</a>
   </div>
+
+  <samModal #deleteModal title="Confirm Removal" cancelButtonLabel="Cancel" submitButtonLabel="Remove" (onSubmit)="onDeleteConfirm()" [closeOnOutsideClick]="false" type="error">
+    <p>Are you sure you wish to remove the following access?</p>
+    <div>
+      <div class="modal-subtitle">
+        <strong class="modal-subtitle">Domain:</strong>
+      </div>
+      <div>{{modalDomain.val}}</div>
+    </div>
+    <div>
+      <div class="modal-subtitle"><strong>Role:</strong></div>
+      <div>{{modalRole.role.val}}</div>
+    </div>
+    <div>
+      <div class="modal-subtitle">
+        <strong>Organizations:</strong>
+      </div>
+      <div *ngFor="let org of modalRole.organizationMapContent[0].organizations">
+        {{orgName(org)}}
+      </div>
+    </div>
+  </samModal>
 
   <ng-container *ngIf="userAccessModel">
     <div *ngFor="let domain of userAccessModel.raw().domainMapContent">
@@ -95,50 +66,27 @@
             </div>
           </div>
         </div>
-        <objects-and-permissions *ngIf="role.isOpen" [objects]="role.organizationMapContent[0].functionMapContent"></objects-and-permissions>
-        <!--<div class="background-white permissions-block" *ngIf="role.isOpen">-->
-          <!--<div class="border-bottom-black permissions-table-header">-->
-            <!--<div class="usa-grid-full">-->
-              <!--<div class="usa-width-one-fourth">-->
-                <!--Object-->
-              <!--</div>-->
-              <!--<div class="usa-width-one-fourth">-->
-                <!--Permissions-->
-              <!--</div>-->
-            <!--</div>-->
-          <!--</div>-->
-          <!--<div class="usa-grid-full permissions-table" *ngFor="let obj of role.organizationMapContent[0].functionMapContent">-->
-            <!--<div class="usa-width-one-fourth">-->
-              <!--{{obj.function.val || 'object not found'}}-->
-            <!--</div>-->
-            <!--<div class="usa-width-three-fourths">-->
-              <!--<span *ngFor="let perm of obj.permission; let lastPermission=last">{{perm.val || 'Permission not Found'}}<span *ngIf="!lastPermission">, </span></span>-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</div>-->
+        <div class="background-white permissions-block" *ngIf="role.isOpen">
+          <div class="border-bottom-black permissions-table-header">
+            <div class="usa-grid-full">
+              <div class="usa-width-one-fourth">
+                Object
+              </div>
+              <div class="usa-width-one-fourth">
+                Permissions
+              </div>
+            </div>
+          </div>
+          <div class="usa-grid-full permissions-table-body" *ngFor="let obj of role.organizationMapContent[0].functionMapContent">
+            <div class="usa-width-one-fourth">
+              {{obj.function.val || 'object not found'}}
+            </div>
+            <div class="usa-width-three-fourths">
+              <span *ngFor="let perm of obj.permission; let lastPermission=last">{{perm.val || 'Permission not Found'}}<span *ngIf="!lastPermission">, </span></span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </ng-container>
-
-  <samModal #deleteModal title="Confirm Removal" cancelButtonLabel="Cancel" submitButtonLabel="Remove" (onSubmit)="onDeleteConfirm()" [closeOnOutsideClick]="false" type="error">
-    <p>Are you sure you wish to remove the following access?</p>
-    <div>
-      <div class="modal-subtitle">
-        <strong class="modal-subtitle">Domain:</strong>
-      </div>
-      <div>{{modalDomain.val}}</div>
-    </div>
-    <div>
-      <div class="modal-subtitle"><strong>Role:</strong></div>
-      <div>{{modalRole.role.val}}</div>
-    </div>
-    <div>
-      <div class="modal-subtitle">
-        <strong>Organizations:</strong>
-      </div>
-      <div *ngFor="let org of modalRole.organizationMapContent[0].organizations">
-        {{orgName(org)}}
-      </div>
-    </div>
-  </samModal>
 </div>
