--- a/src/styles/pages/_assistance-listing-operations.scss
+++ b/src/styles/pages/_assistance-listing-operations.scss
@@ -1,3 +1,4 @@
+
 .assistance-listing-operations{
 
   .usa-alert{
@@ -10,6 +11,10 @@
   }
 
   .sam-list-input .label-wrapper{
+    max-width: 480px;
+  }
+
+  agencyPicker .organization-container {
     max-width: 480px;
   }
 
@@ -37,4 +42,30 @@
     float: left;
     padding: 12px 5px;
   }
+
+  .fal-label-margin {
+    margin-top: -1em;
+    margin-bottom: -1em;
+  }
+
+  .fal-obligations-label {
+    font-weight: bold;
+    color: black;
+    font-size:30px;
+    margin-top: 10px;
+    margin-bottom: 0em;
+  }
+
+  .fal-label {
+    font-weight: bold;
+    color: black;
+    font-size:18px;
+    margin-top: 2em;
+    margin-bottom: 0em;
+  }
+
+  .text-radio-padding {
+    padding-left: 20px;
+  }
 }
+
