wip: mirgration from CSP to BSP

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -51,6 +51,7 @@
 @import 'components/organization-profile';
 @import 'components/role-management/role-managment';
 @import 'components/fal-table';
+@import 'components/address-form';
 
 @import 'pages/awards';
 @import 'pages/entity-object-view';
@@ -76,6 +77,7 @@
 @import 'pages/wage-determination';
 @import 'pages/assistance-listing-operations';
 @import 'pages/organization-detail';
+@import 'pages/organization-create';
 
 html, body{
   height: 100%;
