[SAM-9076] Add additional glue code for formula matching component

--- a/src/app/assistance-listing/assistance-listing-operations/sections/compliance-requirements/compliance-requirements.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/compliance-requirements/compliance-requirements.page.html
@@ -34,6 +34,11 @@
                               [formControlName]="'additionalDocumentation'"
   ></samCheckboxToggledTextarea>
 
+  <falFormulaMatchingInput [options]="formulaMatchingConfig"
+                           [formControlName]="'formulaMatching'"
+                           [name]="'compliance-formula-matching'"
+  ></falFormulaMatchingInput>
+
   <div>
     <div class="pull-left">
       <samButton buttonText="Cancel" (onClick)="onCancelClick($event)"></samButton>
