--- a/src/app/assistance-listing/display-template-demo/demo.page.html
+++ b/src/app/assistance-listing/display-template-demo/demo.page.html
@@ -180,10 +180,10 @@
     <!--How do I apply?-->
     <sam-section id="program-application-information" title="Applying for Assistance" titleId="applying-for-assistance">
       <sam-subsection title="Deadlines">
-        <div class="content-block" [ngSwitch]="program.data?.application?.deadlines?.submission?.flag">
+        <div class="content-block" [ngSwitch]="program.data?.assistance?.deadlines?.flag">
           <ng-container *ngSwitchCase="'yes'">
             <!-- repeat over all deadlines. -->
-            <span *ngFor="let deadline of program.data.application.deadlines.submission.list; let i = index">
+            <span *ngFor="let deadline of program.data?.assistance?.deadlines?.list; let i = index">
               <span class="field" [attr.id]="'program-deadline-dates-' + i">
                 <ng-container *ngIf="deadline.start">{{deadline.start | dateFormat: 'MMM DD, YYYY'}}</ng-container>
                 <ng-container *ngIf="deadline.start && deadline.end"> to </ng-container>
@@ -256,34 +256,36 @@
 
       <sam-subsection title="Application Procedures">
         <p>
-          <ng-container [ngSwitch]="program.data?.application?.procedures?.questions?.OMBCircularA102?.flag">
-            <span class="field" id="program-application-procedures-a102" *ngSwitchCase="'yes'">
-              2 CFR 200, Uniform Administrative Requirements, Cost Principles, and Audit Requirements for Federal Awards applies to this program.
-            </span>
+          <ng-container *ngFor="let item of program.data?.compliance?.CFR200Requirements?.questions">
+            <ng-container *ngIf="item.code === 'subpartE'">
+              <span *ngIf="item.isSelected == true" class="field" id="program-application-procedures-a102">
+                2 CFR 200, Uniform Administrative Requirements, Cost Principles, and Audit Requirements for Federal Awards applies to this program.
+              </span>
 
-            <span class="field" id="program-application-procedures-a102" *ngSwitchDefault>
-              This program is excluded from coverage under 2 CFR 200, Uniform Administrative Requirements, Cost Principles, and Audit
-              Requirements for Federal Awards.
-            </span>
+              <span *ngIf="item.isSelected == false" class="field" id="program-application-procedures-a102">
+                This program is excluded from coverage under 2 CFR 200, Uniform Administrative Requirements, Cost Principles, and Audit
+                Requirements for Federal Awards.
+              </span>
+            </ng-container>
           </ng-container>
 
           <!-- additional content-->
           <span class="field" id="program-application-procedures">
-            {{program.data?.application?.procedures?.additionalInfo?.content}}
+            {{program.data?.assistance?.applicationProcedure?.description}}
           </span>
         </p>
       </sam-subsection>
 
       <sam-subsection title="Criteria for Selecting Proposals">
         <p>
-          <ng-container [ngSwitch]="program.data?.application?.selectionCriteria?.flag">
-            <span class="field" id="program-selection-criteria" *ngSwitchCase="'yes'">
-              {{program.data.application.selectionCriteria.content}}
+          <ng-container [ngSwitch]="program.data?.assistance?.selectionCriteria?.isApplicable">
+            <span class="field" id="program-selection-criteria" *ngSwitchCase="true">
+              {{program.data?.assistance?.selectionCriteria?.description}}
             </span>
 
-            <span class="field" id="program-selection-criteria" *ngSwitchCase="'no'">
+<!--            <span class="field" id="program-selection-criteria" *ngSwitchCase="'no'">
               No
-            </span>
+            </span>-->
 
             <span class="field" id="program-selection-criteria" *ngSwitchDefault>
               Not Applicable
@@ -299,7 +301,7 @@
       </sam-subsection>
 
       <sam-subsection title="Date Range for Approval/Disapproval">
-        <p class="field" id="program-application-approval-interval" [ngSwitch]="program.data?.application?.deadlines?.approval?.interval">
+        <p class="field" id="program-application-approval-interval" [ngSwitch]="program.data?.assistance?.approval?.interval">
           <ng-container *ngSwitchCase="'1'"><em>From 1 to 15 days</em></ng-container>
           <ng-container *ngSwitchCase="'2'"><em>From 15 to 30 days</em></ng-container>
           <ng-container *ngSwitchCase="'3'"><em>From 30 to 60 days</em></ng-container>
@@ -310,13 +312,13 @@
           <ng-container *ngSwitchCase="'8'"><em>Not Applicable</em></ng-container>
           <ng-container *ngSwitchCase="'9'"><em>Other</em></ng-container>
           <span class="field" id="program-application-approval">
-            {{program.data?.application?.deadlines?.approval?.otherInfo?.content}}
+            {{program.data?.assistance?.approval?.description}}
           </span>
         </p>
       </sam-subsection>
 
       <sam-subsection title="Renewals">
-        <p class="field" id="program-application-renewal-interval" [ngSwitch]="program.data?.application?.deadlines?.renewal?.interval">
+        <p class="field" id="program-application-renewal-interval" [ngSwitch]="program.data?.assistance?.renewal?.interval">
           <ng-container *ngSwitchCase="'1'"><em>From 1 to 15 days</em></ng-container>
           <ng-container *ngSwitchCase="'2'"><em>From 15 to 30 days</em></ng-container>
           <ng-container *ngSwitchCase="'3'"><em>From 30 to 60 days</em></ng-container>
@@ -327,13 +329,13 @@
           <ng-container *ngSwitchCase="'8'"><em>Not Applicable</em></ng-container>
           <ng-container *ngSwitchCase="'9'"><em>Other</em></ng-container>
           <span class="field" id="program-application-renewal">
-            {{program.data?.application?.deadlines?.renewal?.otherInfo?.content}}
+            {{program.data?.assistance?.renewal?.description}}
           </span>
         </p>
       </sam-subsection>
 
       <sam-subsection title="Renewals">
-        <p class="field" id="program-application-renewal-interval" [ngSwitch]="program.data?.application?.deadlines?.renewal?.interval">
+        <p class="field" id="program-application-renewal-interval" [ngSwitch]="program.data?.assistance?.renewal?.interval">
           <ng-container *ngSwitchCase="'1'"><em>From 1 to 15 days</em></ng-container>
           <ng-container *ngSwitchCase="'2'"><em>From 15 to 30 days</em></ng-container>
           <ng-container *ngSwitchCase="'3'"><em>From 30 to 60 days</em></ng-container>
@@ -344,13 +346,13 @@
           <ng-container *ngSwitchCase="'8'"><em>Not Applicable</em></ng-container>
           <ng-container *ngSwitchCase="'9'"><em>Other</em></ng-container>
           <span class="field" id="program-application-renewal">
-            {{program.data?.application?.deadlines?.renewal?.otherInfo?.content}}
+            {{program.data?.assistance?.renewal?.description}}
           </span>
         </p>
       </sam-subsection>
       
       <sam-subsection title="Appeals">
-        <p class="field" id="program-application-appeal-interval" [ngSwitch]="program.data?.application?.deadlines?.appeal?.interval">
+        <p class="field" id="program-application-appeal-interval" [ngSwitch]="program.data?.assistance?.appeal?.interval">
           <ng-container *ngSwitchCase="'1'"><em>From 1 to 15 days</em></ng-container>
           <ng-container *ngSwitchCase="'2'"><em>From 15 to 30 days</em></ng-container>
           <ng-container *ngSwitchCase="'3'"><em>From 30 to 60 days</em></ng-container>
@@ -361,7 +363,7 @@
           <ng-container *ngSwitchCase="'8'"><em>Not Applicable</em></ng-container>
           <ng-container *ngSwitchCase="'9'"><em>Other</em></ng-container>
           <span class="field" id="program-application-appeal">
-            {{program.data?.application?.deadlines?.appeal?.otherInfo?.content}}
+            {{program.data?.assistance?.appeal?.description}}
           </span>
         </p>
       </sam-subsection>
