[SAM-9076] Add formula matching labelwrapper

--- a/src/app/assistance-listing/components/formula-matching/formula-matching.template.html
+++ b/src/app/assistance-listing/components/formula-matching/formula-matching.template.html
@@ -1,1 +1,7 @@
+<labelWrapper #formulaMatchingLabel
+              [name]="name"
+              [label]="label"
+              [hint]="hint"
+              [required]="required">
 
+</labelWrapper>
